# EE2211

./: .gitignore  environment.yml  finals.py  functions.py  imports.py  macEnvironment.yml  pyproject.toml  requirements.txt  test.ipynb
LectureNotes/: lec10.ipynb  lec11.ipynb  lec12.ipynb  lec4.ipynb  lec5.ipynb  lec6.ipynb  lec7.ipynb  lec8.ipynb  lec9.ipynb
LectureNotes/Python Tutorial/: EE2211 Python Tutorial2.pptx  EE2211_python_demo.ipynb  classification_demo.ipynb
T10/: Qn6.py
T11/: Qn5.py  Qn6.py  Qn7.py
T2/: annual-motor-vehicle-population-by-vehicle-type.csv  government-expenditure-on-education.csv  pima-indians-diabetes.csv  t2.ipynb
T3/: t3.ipynb
T4/: t4.ipynb
T5/: t5.ipynb
T6/: t6.ipynb  working.ipynb
T7/: t7.ipynb
T8/: Tut8.py  q1.py  q2.py
T8/Figures/: FigTut8Cost0.03.eps  FigTut8Extrapolation0.03.eps
T9/: qn4.py  sin_test.py  t9.ipynb
assignments/: A1_A0233404U.py  A1_A0233515M_Draft01.py  A1_StudentMatriculationNumber.py
assignments/A2/: A2_A0233404U.py  A2_Han.py  A2_StudentMatriculationNumber.py
assignments/A3/: A3_A0233404U.py  A3_A0233515M.py  A3_StudentMatriculationNumber.py  test_case.npy
custom/: functions.py  iris.ser  models.py  neural_network.py  sin_wave.ser  solvers.py  test.ipynb  test.py  torchlightning.py
custom/lightning_logs/version_0/: metrics.csv
custom/lightning_logs/version_1/: metrics.csv
custom/lightning_logs/version_10/: metrics.csv
custom/lightning_logs/version_11/: metrics.csv
custom/nn/: mnist_test.py  neural_network.py
midterms/: calcs.ipynb
solvers/: linear.py
(+70 files in other folders)
