[tool.poetry]
name = "ee2211"
version = "0.1.0"
description = ""
authors = ["ginloy <liyongleow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
lightning = "^2.0.1.post0"
jupyter = "^1.0.0"
pyqt6 = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
